# aisp-open-core

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  justfile
.cargo/: config.toml
.github/workflows/: ci.yml
archive/aisp-rust/: Cargo.toml
archive/aisp-rust/src/: lib.rs  streaming.rs  symbol.rs  tier.rs  validate.rs  z3_validation.rs
core/: Cargo.toml
core/crates/aisp-cli/: Cargo.toml
core/crates/aisp-cli/src/: main.rs
core/crates/aisp-core/: Cargo.toml  build.rs
core/crates/aisp-core/examples/: trivector_demo.rs
core/crates/aisp-core/src/: advanced_theorem_prover.rs  anti_drift.rs  ast.rs  axiom_system.rs  batch_verification.rs  category_theory_verifier.rs  completeness_analysis.rs  compositional_proof_chain.rs  conflict_detector.rs  conflict_types.rs  constraint_solver.rs  enhanced_z3_verification.rs  error.rs  formal_semantics.rs  formula_converter.rs  ghost_intent_search.rs  ghost_intent_validation.rs  hebbian_learning.rs  incompleteness_handler.rs  invariant_analyzer.rs  invariant_discovery.rs  invariant_discovery_main.rs  invariant_exporters.rs  invariant_formulas.rs  invariant_types.rs  lib.rs  mathematical_evaluator.rs  mathematical_semantics.rs  mechanized_proofs.rs  model_checker.rs  performance_guarantees.rs  pocket_architecture.rs  proof_search.rs  proof_types.rs  property_extractor.rs  property_factory.rs  property_types.rs  protocol_state_machine.rs  reference_integration_test.rs  relational_new.rs  (+18 more)
core/crates/aisp-core/tests/: end_to_end_validation.rs  formal_integration_simple.rs  formal_specification_validation.rs  formal_verification_comprehensive.rs  formal_verification_integration.rs  formal_verification_integration_fixed.rs  formal_verification_simple.rs  formal_verification_test.rs  implementation_validation.rs  integration_comprehensive.rs  invariant_discovery_integration.rs  parser_integration.rs  performance_benchmarks.rs  property_testing.rs  property_testing_formal.rs  property_testing_semantic.rs  (+7 more)
core/docs/adr/: 009-property-based-testing.md
core/tests/: reference_challenge_test.rs
docs/architecture/: WORKSPACE.md
docs/architecture/adrs/: 026-test-quality-and-validation-standards.md
docs/development/: TESTING.md
docs/examples/: reference.md
docs/research/: Z3_INTEGRATION_SUCCESS_REPORT.md
docs/user-guides/: HUMAN_GUIDE.md
tools/validator/: README.md  package.json
tools/validator/src/: index.js
tools/validator/test/: validate.test.js
(+110 files in other folders)
