[workspace]
members = [
    "core/crates/aisp-core", 
    "core/crates/aisp-cli",
    "archive/aisp-rust",
]
resolver = "2"

# Workspace package defaults
[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Bradley Ross (https://github.com/bar181)", "AISP Development Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bar181/aisp-open-core"
homepage = "https://github.com/bar181/aisp-open-core"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }

# CLI dependencies  
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
indicatif = "0.17"

# Analysis dependencies
petgraph = "0.6"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }

# Testing dependencies
proptest = "1.0"
assert_cmd = "2.0"

# Z3 integration (optional in individual crates)
z3 = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
debug = true

[profile.test]
opt-level = 1

# Optimized profile for CLI tools
[profile.cli]
inherits = "release"
debug = false
strip = "symbols"

# WASM-optimized profile
[profile.wasm]
inherits = "release"
opt-level = "z"
strip = true
panic = "abort"
lto = true

# Workspace lint configuration.
#
# These clippy lints are style/design preferences (not correctness issues) that
# are pervasive across the codebase. They are explicitly allowed pending the
# warning-reduction cleanup tracked as ROADMAP R-12, so that
# `cargo clippy --workspace --all-targets -- -D warnings` stays green without
# suppressing correctness lints. Dead-code and rustc semantic lints are NOT
# allowed here — those are fixed at the source.
[workspace.lints.clippy]
field_reassign_with_default = "allow"
useless_vec = "allow"
vec_init_then_push = "allow"
empty_line_after_doc_comments = "allow"
large_enum_variant = "allow"
result_large_err = "allow"
manual_strip = "allow"
too_many_arguments = "allow"
manual_ok_err = "allow"
new_ret_no_self = "allow"
type_complexity = "allow"
ptr_arg = "allow"
format_in_format_args = "allow"
cloned_ref_to_slice_refs = "allow"
match_single_binding = "allow"
arc_with_non_send_sync = "allow"
single_match = "allow"
wrong_self_convention = "allow"